src/styles.css
@font-face {
  font-family: 'Inter';
  src: url(./assets/fonts/InterVariable.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: 'Inter';
  src: url(./assets/fonts/InterVariable-Italic.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: italic;
  font-display: block;
}

@font-face {
  font-family: 'Urbanist';
  src: url(./assets/fonts/Urbanist-VariableFont_wght.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: normal;
  font-display: block;
}

@font-face {
  font-family: 'Urbanist';
  src: url(./assets/fonts/Urbanist-Italic-VariableFont_wght.woff2), format('woff2-variations');
  font-weight: 100 900;
  font-style: italic;
  font-display: block;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Urbanist', serif;
  font-weight: 550;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Inter', sans-serif;
  font-weight: 200;
}

input,
button {
  appearance: none;
  border: none;
  background-color: none;
  outline: none;
}

.header {
  padding: 1rem 2rem;
  display: flex;
  justify-content: space-around;
}

.right-container {
  display: flex;
  justify-content: center;
}

.search {
  background-color: white;
  border: 4px solid black;
  padding: 0rem 2rem;
  font-size: 2rem;
}

.unit, .search-submit {
  background-color: white;
  border: 4px solid black;
  padding: 1rem;
  font-size: 2rem;
}

.unit:hover, .search-submit:hover {
  background-color: lightgray;
  box-shadow: 0 4px 8px black;
}

.unit.checked {
  background-color: grey;
}

.location {
  font-size: 3.5rem;
}

.unit-toggle {
  display: flex;
  justify-content: center;
}

.content {
  padding: 1rem 2rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
}

.heading {
  font-size: 2.5rem;
}

.data-container.main {
  display: flex;
  justify-content: flex-start;
  gap: 2rem;
  align-items: baseline;
}

.current-temp {
  font-size: 5rem;
}

.current-condition {
  font-family: 'Urbanist', serif;
  font-size: 2.5rem;
  font-weight: 550;
}

